# mapchar

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: cli_reference.rst  conf.py  index.rst  installation.rst
docs/features/: advanced.rst  compression.rst  expressions.rst  ranges_files.rst
examples/: dates_dmy.mapc  dates_mdy.mapc  ips.fuse  logins.mapc
fuse/: __init__.py  __main__.py  __version__.py  args.py  cli.py  compression.py  console.py  exceptions.py  file_parser.py  logger.py
fuse/generator/: __init__.py  engine.py  exceptions.py  nodes.py
fuse/utils/: files.py
mapchar/: __init__.py  __main__.py  __version__.py  args.py  cli.py  compression.py  console.py  exceptions.py  file_parser.py  logger.py  runner.py
mapchar/generator/: __init__.py  engine.py  exceptions.py  nodes.py
mapchar/utils/: classes.py  files.py  formatters.py
tests/: conftest.py  test_args.py  test_classes.py  test_cli.py  test_compression.py  test_console.py  test_file_parser.py  test_files.py  test_formatters.py  test_generator.py  test_logger.py
