[tool.poetry]
name = "fuse-generator"
version = "6.0.2"
description = "Generate wordlists using pattern logic and expressions."
authors = ["Ryan R. <pwnfo@proton.me>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "fuse" }]

[tool.poetry.dependencies]
python = ">=3.10"
rich = "^15.0.0"
ruff = "^0.15.15"

[tool.poetry.scripts]
fuse = "fuse.cli:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.20.0"
pre-commit = "^4.5.1"
pytest = "^9.0.3"

[tool.poetry.group.docs.dependencies]
sphinx = "<9"
furo = "^2025.12.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
]

ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
